FIX: resolve issue with toast notifications not showing new messages

--- a/src/app/compoenents/toast/toast.component.css
+++ b/src/app/compoenents/toast/toast.component.css
@@ -1,58 +1,73 @@
+.toast-wrapper {
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  z-index: 150;
+}
+img {
+  width: 23px;
+  margin-right: 8px;
+  border-radius: 35px;
+}
 .toast-container {
- position: fixed;
- top: 20px;
- right: 20px;
- background-color: #333;
- color: #000000;
- padding: 12px 20px;
- border-radius: 12px;
- box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1), 0 3px 3px rgba(0, 0, 0, 0.05);
- display: flex;
- align-items: center;
- justify-content: space-between;
- animation: _ngcontent-ng-c4268140203_slideIn 0.2s ease-out, fadeOut 0.3s ease-in 1s forwards;
+  background-color: #ffffff;
+  color: black;
+  padding: 7px 12px;
+  border-radius: 12px;
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1), 0 3px 3px rgba(0, 0, 0, 0.05);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  min-width: 250px;
+  transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
+  opacity: 1;
+  margin-bottom: 10px;
+  /* animation: slideIn 0.3s ease-out; */
+  animation: 0.35s cubic-bezier(0.21, 1.02, 0.73, 1) 0s 1 normal forwards running go32;
+  font-size: 14.5px;
 }
 
 .success {
- background-color: #ffffff;
+  color: #050505;
 }
 
 .error {
- background-color: #f44336;
+  color: #f44336;
 }
 
 .info {
- background-color: #2196f3;
+  color: #2196f3;
 }
 
 .close-btn {
- background: none;
- border: none;
- color: white;
- font-size: 18px;
- cursor: pointer;
- margin-left: 10px;
+  background: none;
+  border: none;
+  color: black;
+  font-size: 18px;
+  cursor: pointer;
+  margin-left: 10px;
 }
 
 @keyframes slideIn {
- from {
-   transform: translateY(-50px) scale(1);
-   opacity: 0;
- }
- to {
-   transform: translateY(0);
-   opacity: 1;
- }
+  from {
+    transform: translateY(-20px);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
 }
-
-@keyframes fadeOut {
- to {
-   opacity: 0;
-   transform: translateY(-50px) scale(0.7);
- 
- }
+@keyframes go32 {
+  0% {
+    transform: translate3d(0, -200%, 0) scale(.6);
+    opacity: .5;
+  }
+  100% {
+    transform: translate3d(0, 0, 0) scale(1);
+    opacity: 1;
 }
-img {
- width: 20px;
- margin-right: 6px;
 }
